fix white rectangle in dark mode

--- a/src/gui/src/assets/centralize.css
+++ b/src/gui/src/assets/centralize.css
@@ -1,6 +1,16 @@
 /* Temporary CSS - WiP - Don't modify */
 /* JP: deduplicated */
 
+/* Fix white stripe at bottom in dark mode */
+html, body {
+    background-color: #fff;
+}
+
+html:has(#app.theme--dark),
+body:has(#app.theme--dark) {
+    background-color: #121212;
+}
+
 /* Fullscreen Dialog */
 div.v-dialog__content header {
     position: sticky;
